--- a/index.html
+++ b/index.html
@@ -79,17 +79,14 @@
     <main>
       <!--Home page content area-->
       <div class="jumbotron">
-        <h1 class="display-4">Hello, world!</h1>
+        <h1 class="display-4">Hi there!!</h1>
         <p class="lead">
-          This is a simple hero unit, a simple jumbotron-style component for
-          calling extra attention to featured content or information.
+          Thanks for visiting my portfolio!!
         </p>
         <hr class="my-4" />
         <p>
-          It uses utility classes for typography and spacing to space content
-          out within the larger container.
+          I am Abirami. I am currently living in Toronto. I am a mainframe developer.
         </p>
-        <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
       </div>
     </main>
     <footer>
